swagger for api show tournament and modularization of resources involved
